tests/regression/errors/basic/syntax_error_24.csd
// Syntax error test 24 - missing semicolon
sus x drip = 24
sus y drip = x +   // Missing operand
vibez.spill("This should not execute")
